[gd_scene load_steps=11 format=3 uid="uid://bygij2fuc74p5"]

[ext_resource type="PackedScene" path="res://addons/escoria-ui-keyboard-9verbs/tooltip/action_target_tooltip.tscn" id="1"]
[ext_resource type="PackedScene" path="res://addons/escoria-ui-keyboard-9verbs/inventory/inventory_ui.tscn" id="2"]
[ext_resource type="PackedScene" path="res://addons/escoria-ui-keyboard-9verbs/verbs_menu.tscn" id="3"]
[ext_resource type="Script" path="res://addons/escoria-core/game/scenes/dialogs/esc_dialog_player.gd" id="4"]
[ext_resource type="Script" path="res://addons/escoria-ui-keyboard-9verbs/game.gd" id="5"]
[ext_resource type="PackedScene" path="res://addons/escoria-core/game/scenes/camera_player/camera.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://u8an5av5fuxx" path="res://addons/escoria-core/ui_library/menus/main_menu/main_menu.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://gfjgmbcafyyt" path="res://addons/escoria-core/ui_library/menus/pause_menu/pause_menu.tscn" id="9"]
[ext_resource type="Theme" path="res://addons/escoria-ui-keyboard-9verbs/theme.tres" id="10"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.6, 0.6, 0.6, 0.5)

[node name="game" type="Node2D"]
script = ExtResource("5")
main_menu = NodePath("ui/main_menu")
pause_menu = NodePath("ui/pause_menu")
ui_parent_control_node = NodePath("ui/Control")

[node name="dialog_layer" type="CanvasLayer" parent="."]

[node name="ESCDialogsPlayer" type="Control" parent="dialog_layer"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("10")
script = ExtResource("4")

[node name="ui" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("10")

[node name="panel_down" type="PanelContainer" parent="ui/Control"]
layout_mode = 0
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="ui/Control/panel_down"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ui/Control/panel_down/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="tooltip" parent="ui/Control/panel_down/VBoxContainer/MarginContainer" instance=ExtResource("1")]
layout_mode = 2
text = "Test"
color = Color(1, 1, 1, 1)

[node name="HSeparator" type="HSeparator" parent="ui/Control/panel_down/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ui/Control/panel_down/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VerbsMargin" type="MarginContainer" parent="ui/Control/panel_down/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="verbs_menu" parent="ui/Control/panel_down/VBoxContainer/HBoxContainer/VerbsMargin" instance=ExtResource("3")]
layout_mode = 2

[node name="MainMargin" type="MarginContainer" parent="ui/Control/panel_down/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ui/Control/panel_down/VBoxContainer/HBoxContainer/MainMargin"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ui/Control/panel_down/VBoxContainer/HBoxContainer/MainMargin/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="MenuButton" type="Button" parent="ui/Control/panel_down/VBoxContainer/HBoxContainer/MainMargin/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Menu"

[node name="InventoryMargin" type="MarginContainer" parent="ui/Control/panel_down/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="inventory_ui" parent="ui/Control/panel_down/VBoxContainer/HBoxContainer/InventoryMargin" instance=ExtResource("2")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="hover_stack" type="Label" parent="ui"]
offset_left = 1085.0
offset_top = 2.81912
offset_right = 1283.0
offset_bottom = 107.819

[node name="main_menu" parent="ui" instance=ExtResource("7")]
visible = false

[node name="pause_menu" parent="ui" instance=ExtResource("9")]
visible = false
theme = ExtResource("10")

[node name="camera" parent="." instance=ExtResource("6")]

[connection signal="pressed" from="ui/Control/panel_down/VBoxContainer/HBoxContainer/MainMargin/VBoxContainer/MarginContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
